--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.4.1",
+    "@strapi/plugin-documentation": "^5.4.1",
     "@strapi/plugin-users-permissions": "5.4.1",
     "@strapi/strapi": "5.4.1",
     "fs-extra": "^10.0.0",
